--- a/cv/latex_cv-master/CV.tex
+++ b/cv/latex_cv-master/CV.tex
@@ -1,10 +1,10 @@
 \documentclass{muratcan_cv}
 \setname{Ashish}{Patel}
 \setaddress{London, UK}
-\setmobile{+44 7742118474}
+\setmobile{+91 7705047900}
 \setmail{ashishpatel0720@gmail.com}
 \setposition{BigData Engineer} %ignored for now
-\setlinkedinaccount{https://linkedin.com/in/ashishpatel0720/} 
+\setlinkedinaccount{https://linkedin.com/in/ashishpatel0720/}
 \setportfolio{https://ashish.live/}
 
 %you can play with color of the template (red is also nice..)
@@ -21,40 +21,51 @@
 %
 % Summary
 \addblocktext{Summary}{ Experienced Software Engineer with \textbf{4.5+ years} of total experience in \textbf{Big Data}, \textbf{Distributed Systems}, \textbf{Java} and \textbf{Python} seeking to apply my abilities to contribute and build something productive.\\
-I am also active contributor to Open-source projects like \textbf{Apache Airflow}.
+I am an active contributor to \textbf{Apache Airflow}.
 }
 % Experience
 \section{Experience}
     % Skyscanner
-    \datedexperience{Skyscanner}{Dev, 2021 - Present / London, UK} 	
+    \datedexperience{Skyscanner}{Dev, 2021 - Present / London, UK}
 		\explanation{Senior Software Engineer ( Distributed Systems ) }\\
-        \explanationdetail{\coloredbullet\
-		Part of the \textbf{Data Platform} team, and working on cutting edge big data solutions to enable our Data Analysts and Data Scientists to make sense of revenue data.}
 		\explanationdetail{\coloredbullet\
-	 Building High Scalable Streaming Pipelines using cutting edge solutions like \textbf{Kafka}, \textbf{Kinesis} and \textbf{ Samaza}.
+	 Building High-Quality Scalable ETL Frameworks and Pipelines using cutting edge solutions like \textbf{Databricks}, \textbf{ Apache Spark}, \textbf{DeltaLake},  \textbf{Apache  Airflow} and \textbf{AWS}.
 	 }
-	\explanationdetail{\coloredbullet\
-	 Building High-Quality Scalable ETL Frameworks using cutting edge solutions like \textbf{Databricks}, \textbf{Spark}, \textbf{Airflow} and \textbf{AWS}.
+        \explanationdetail{\coloredbullet\
+		Working on cutting edge big data solutions to enable our Data Analysts and Data Scientists to make sense of revenue data and Clickstream data.}
+		\explanationdetail{\coloredbullet\
+	 Building High Scalable Streaming Pipelines using cutting edge solutions like \textbf{Apache Kafka} and \textbf{AWS MSK}.
 	 }
+
   \explanationdetail{\coloredbullet\
 		\textbf{Tech Stack} - Apache Spark, Apache Airflow, Apache Kafka, AWS Kinesis, Samza, Databricks, DeltaLake.
 		}
+		    % Apache Airflow
+    \datedexperience{Apache Airflow}{Feb, 2021 - Present / Remote}
+		\explanation{Open Source Contributor}
+
+        \explanationdetail{\coloredbullet\
+		\href{https://github.com/apache/airflow/commits?author=pateash}{Contributed} \textbf{12+} Pull requests to Opensource \href{https://github.com/apache/airflow}{Airflow} repository on Github.}
+    \explanationdetail{\coloredbullet\
+	Participated and contributed in Meetups and discussions to make Apache Airflow one of the best Open Source Orchestration platform.}
+
     % WALMART LABS
-    \datedexperience{Walmart Global Tech}{Feb, 2021 - Dec, 2021 / Bangalore, India} 	
+    \datedexperience{Walmart Global Tech}{Feb, 2021 - Dec, 2021 / Bangalore, India}
 		\explanation{Software Engineer III (Big Data) }
-		
+
         \explanationdetail{\coloredbullet\
 		Part of the \textbf{supply chain technology} team, and working on cutting edge forecasting solutions to enable the everyday low-cost philosophy of Walmart.}
 		\explanationdetail{\coloredbullet\
-	 Building \textbf{High-Quality Scalable ETL Frameworks} to build our Forecasting Pipelines.
+	 Built High-Quality Scalable ETL Frameworks and Pipelines to build our Forecasting Pipelines.
 	 }
       \explanationdetail{\coloredbullet\
 	Migrated our On-Prem Hadoop Clusters to Google Cloud Platform as part of a strategic partnership with Google.}
 	  \explanationdetail{\coloredbullet\
 		\textbf{Tech Stack} - Apache Spark, Java, PySpark, Apache Airflow, GCP DataProc, Bigquery,Astronomer
 		}
+		\\
 	% Deutsche bank
-	\datedexperience{Deutsche Bank}{July, 2018 - Jan, 2021 / Pune, India} 
+	\datedexperience{Deutsche Bank}{July, 2018 - Jan, 2021 / Pune, India}
 	\explanation{Senior Software Engineer}
         \explanationdetail{\coloredbullet\
 		Worked As a Big Data engineer in CIB division for Volcker Project.}
@@ -71,7 +82,7 @@ Reactor Framework with Oracle Database.}
 	\textbf{Tech Stack} - Apache Spark, Hadoop MapReduce, Hive, Impala, Beeline, Cloudera CDH,
 Java, Spring Framework, Spring Boot, Scala, Linux, GCP.}\\
 	% NIT, Bhopal
-	\datedexperience{NIT, Bhopal}{Oct, 2017 - Feb, 2018 / Bhopal, India} 
+	\datedexperience{NIT, Bhopal}{Oct, 2017 - Feb, 2018 / Bhopal, India}
 	\explanation{Research Assistant}
         \explanationdetail{\coloredbullet\
 		Co-written  \textbf{\itshape{"A Comparative Study of Music Recommendation Systems"}} with
@@ -83,10 +94,11 @@ practicality on mobile devices.}
 		Evaluated different Recommendation Strategies by training different ML models and
 evaluating them.}
     \explanationdetail{\coloredbullet\
-		\textbf{Reference} - https://ieeexplore.ieee.org/document/8546852
+		\textbf{Reference} - \textbf{https://ieeexplore.ieee.org/document/8546852}
 		}
+		\\
 	% CARWALE
-	\datedexperience{CarWale.com}{May, 2017 - Jul, 2017 / Mumbai, India} 
+	\datedexperience{CarWale.com}{May, 2017 - Jul, 2017 / Mumbai, India}
 	\explanation{Summer Intern}
         \explanationdetail{\coloredbullet\
 		Worked as Data Engineering Intern in the R\&D division of CarWale.}
@@ -102,24 +114,24 @@ architecture, we have also created a web application which will provide an inter
 and submit, schedule, and view results.}
  	 \explanationdetail{\coloredbullet\
 	\textbf{Tech Stack} - Scala, Apache Spark, Cassandra, Python-Flask Framework}
- 
- 
+
+
 %
 %
 %Education
-\section{Education} 
-    \datedexperience{NIT, Bhopal}{ 2014 - 2018} 
-    \explanation{Bachelor of Technology, Computer Science \& Engineering} 
-     \explanationdetail{\coloredbullet\ % 
+\section{Education}
+    \datedexperience{NIT, Bhopal}{ 2014 - 2018}
+    \explanation{Bachelor of Technology, Computer Science \& Engineering}
+     \explanationdetail{\coloredbullet\ %
      Graduated in Computer Science and Engineering.
-	\textbf{GGPA} - 8.4/10 
+	\textbf{GGPA} - 8.4/10
 	}
-	 \explanationdetail{\coloredbullet\ % 
+	 \explanationdetail{\coloredbullet\ %
 	  Worked as Web developer in the Student Council and developed websites and tech infrastructure for College events.
      }
-     
-    \datedexperience{I.P.S Academy}{2011 - 2013} 
-    \explanation{Higher Secondary, Science \& Mathematics} 
+
+    \datedexperience{I.P.S Academy}{2011 - 2013}
+    \explanation{Higher Secondary, Science \& Mathematics}
     \explanationdetail{\coloredbullet\
      Completed Higher Secondary with Physics, Chemistry, and Maths.
 	Percentage - 90.2\%     }
@@ -141,21 +153,21 @@ and submit, schedule, and view results.}
 
 % AWARDS and RECOGNITION
 \section{Awards and Recognition}
-    \newcommand{\awardone}{ 
+    \newcommand{\awardone}{
     Competed with 200+ teams and Won 3rd prize in Deutsche Bank's Global DataScience Competition Dabble.\\
     }
     %
-    \newcommand{\awardtwo}{    
+    \newcommand{\awardtwo}{
 		Won 2nd prize in Hackathon organized by Appointy Inc, https://github.com/pateash/appointy-hackathon\\
-		}       
+		}
     %
-        \newcommand{\awardthree}{ 
+        \newcommand{\awardthree}{
     Winner of Deutsche bank's excellence award.\\
     }
     %
 
-    \newcommand{\awardfour}{    
-    	Winner of Medhavi Chhatra Puruskar, given by MP State Government for excellent performance in State board exams.}       		
+    \newcommand{\awardfour}{
+    	Winner of Medhavi Chhatra Puruskar, given by MP State Government for excellent performance in State board exams.}
     %
 
 	%
@@ -168,18 +180,18 @@ and submit, schedule, and view results.}
 \section{Extra}
 %    \newcommand{\extraone}{ Languages - English, Hindi    }
     %
-    \newcommand{\extratwo}{    
+    \newcommand{\extratwo}{
 		Contributing to Apache Airflow, contributions - \textbf{https://github.com/pateash}
-		}       
+		}
     %
-    \newcommand{\extrathree}{    
+    \newcommand{\extrathree}{
     	Working on Open source, CMD tool for developers, \textbf{https://github.com/codingtools/cdt}
-		}       		
+		}
     %
-    \newcommand{\extrafour}{    
+    \newcommand{\extrafour}{
 		Writing Articles on Codebrace on Medium \textbf{https://medium.com/codebrace}, with over \textbf{100K+} reads so far.
 		}
-    \newcommand{\extrafive}{    
+    \newcommand{\extrafive}{
 		Created Opensource Regexplore, Intuitive Regex Checker \textbf{https://regexplore.github.io}
 		}
 
