--- a/cv/latex_cv-master/cover_letter.tex
+++ b/cv/latex_cv-master/cover_letter.tex
@@ -15,34 +15,34 @@
 %Set variables
 %You can add sections, texts, explanations just by copying the style below. Replace the dummy texts "\lipsum[1][x-x]\par" with actual texts.
 %Create header
-    \headerview
-    \vspace{1ex}
+\headerview
+\vspace{1ex}
 %Sections
 %
-    \setcompanyname{\textbf{Shopee Inc.}}
-    \setcontactperson{}
-    \setclaimedposition{\textbf{Data Engineer}}
-    \coverletter{ %
-        \indent %replace this part with actual text
-        As a long-time follower of your company, I was excited to see the opening
-        for \textbf{Data Engineer} on your job portal. The opportunity to work with your
-        company and fulfil this role is a fantastic opportunity, and I feel that my
-        education and recent job experience make me the ideal candidate for the
-        position.\\
+\setcompanyname{\textbf{Algolia}}
+\setcontactperson{}
+\setclaimedposition{\textbf{Big Data Engineer}}
+\coverletter{ %
+\indent %replace this part with actual text
+As a long-time follower of your company, I was excited to see the opening
+for \textbf{Big Data Engineer} on your job portal. The opportunity to work with your
+company and fulfil this role is a fantastic opportunity, and I feel that my
+education and recent job experience make me the ideal candidate for the
+position.\\
 
-        My professional experience has given me the opportunity to work with a
-        diverse team and meet company goals in a timely manner. I know your
-        company is looking to reach new customers and continue to grow, and I
-        have a track record of promoting this in the workplace. As you’ll notice in
-        my attached resume, I have more than \textbf{3.5+ years} of experience in \textbf{
-            Big Data Engineering}, I am obsessed with Data and the value it
-        provides to customers and business.\\
+My professional experience has given me the opportunity to work with a
+diverse team and meet company goals in a timely manner. I know your
+company is looking to reach new customers and continue to grow, and I
+have a track record of promoting this in the workplace. As you’ll notice in
+my attached resume, I have more than \textbf{3.5+ years} of experience in \textbf{
+Big Data and Software Engineering}, I am obsessed with Data and the value it
+provides to customers and business.\\
 
-        In closing, I am excited about the opportunity and feel can fully support
-        the team as well as the business and encourage the overall growth of
-        the company. I look forward to hearing more about the position and
-        appreciate your consideration.
-    }
+In closing, I am excited about the opportunity and feel can fully support
+the team as well as the business and encourage the overall growth of
+the company. I look forward to hearing more about the position and
+appreciate your consideration.
+}
 %Footnote
-    \createfootnote
+\createfootnote
 \end{document}
