--- a/cv/latex_cv-master/CV.tex
+++ b/cv/latex_cv-master/CV.tex
@@ -1,6 +1,6 @@
 \documentclass{muratcan_cv}
 \setname{Ashish}{Patel}
-\setaddress{London, UK}
+\setaddress{Bengaluru, India}
 \setmobile{+91 7705047900}
 \setmail{ashishpatel0720@gmail.com}
 \setposition{BigData Engineer} %ignored for now
@@ -20,13 +20,25 @@
 %Sections
 %
 % Summary
-\addblocktext{Summary}{ Experienced Software Engineer with \textbf{4.5+ years} of total experience in \textbf{Big Data}, \textbf{Distributed Systems}, \textbf{Java} and \textbf{Python} seeking to apply my abilities to contribute and build something productive.\\
+\addblocktext{Summary}{ Experienced Software Engineer experience in \textbf{Big Data}, \textbf{Distributed Systems}, \textbf{Java}, \textbf{Scala} and \textbf{Python} seeking to apply my abilities to contribute and build something productive.\\
 I am an active contributor to \textbf{Apache Airflow}.
 }
 % Experience
 \section{Experience}
+    % Prophecy
+    \datedexperience{Prophecy.io}{Jan, 2023 - Present / Bengaluru, India}
+		\explanation{Senior Data Engineer}\\
+		\explanationdetail{\coloredbullet\
+	 Building High-Quality Scalable ETL Frameworks and Pipelines using cutting edge solutions.
+	 }
+		\explanationdetail{\coloredbullet\
+	 working as Solutions Architect and helping our customers creating best frameworks to simpilify their data pipelines.
+	 }
+  \explanationdetail{\coloredbullet\
+		\textbf{Tech Stack} - Apache Spark, Apache Airflow, Python, Scala, Databricks, Snowflake and DBT.
+		}
     % Skyscanner
-    \datedexperience{Skyscanner}{Dev, 2021 - Present / London, UK}
+\datedexperience{Skyscanner}{Dec, 2021 - Jan, 2023 / London, UK}
 		\explanation{Senior Software Engineer ( Distributed Systems ) }\\
 		\explanationdetail{\coloredbullet\
 	 Building High-Quality Scalable ETL Frameworks and Pipelines using cutting edge solutions like \textbf{Databricks}, \textbf{ Apache Spark}, \textbf{DeltaLake},  \textbf{Apache  Airflow} and \textbf{AWS}.
@@ -38,7 +50,7 @@ I am an active contributor to \textbf{Apache Airflow}.
 	 }
 
   \explanationdetail{\coloredbullet\
-		\textbf{Tech Stack} - Apache Spark, Apache Airflow, Apache Kafka, AWS Kinesis, Samza, Databricks, DeltaLake.
+		\textbf{Tech Stack} - Apache Spark, Apache Airflow, Databricks, DeltaLake, Python and Java
 		}
 		    % Apache Airflow
     \datedexperience{Apache Airflow}{Feb, 2021 - Present / Remote}
@@ -142,9 +154,9 @@ and submit, schedule, and view results.}
     %
     \newcommand{\skillone}{\createskill{Programming}{Java\cpshalf Scala\cpshalf Python\cpshalf C++\cpshalf Bash}}
     %
-    \newcommand{\skilltwo}{\createskill{Big Data Frameworks}{Apache Spark\cpshalf Kafka\cpshalf Databricks \cpshalf Airflow\cpshalf Hive\cpshalf AWS\cpshalf GCP}}
+    \newcommand{\skilltwo}{\createskill{Big Data Frameworks}{Apache Spark\cpshalf Kafka\cpshalf Databricks \cpshalf Airflow\cpshalf Snowflake\cpshalf DBT\cpshalf Hive\cpshalf AWS\cpshalf GCP}}
     %
-    \newcommand{\skillthree}{\createskill{Software Development}{Spring Framework\cpshalf Oracle\cpshalf MySql\cpshalf  Agile\cpshalf DevOps}}
+    \newcommand{\skillthree}{\createskill{Software Development}{Spring Framework\cpshalf RDBMS\cpshalf Python Flask\cpshalf  Agile\cpshalf DevOps}}
     %
     \newcommand{\skillfour}{\createskill{Languages}{\textbf{\emph{Native:}} \ \  Hindi \cpshalf\ \ \textbf{\emph{Fluent:}} \ \ English }}
     %
