--- a/cv/latex_cv-master/CV.tex
+++ b/cv/latex_cv-master/CV.tex
@@ -4,7 +4,7 @@
 \setmobile{+91 7705047900}
 \setmail{ashishpatel0720@gmail.com}
 \setposition{BigData Engineer} %ignored for now
-\setlinkedinaccount{https://linkedin.com/in/ashishpatel0720/}
+\setlinkedinaccount{https://linkedin.com/in/ashishpatel0720/} 
 \setportfolio{https://ashish.live/}
 
 %you can play with color of the template (red is also nice..)
@@ -26,19 +26,22 @@ I am an active contributor to \textbf{Apache Airflow}.
 % Experience
 \section{Experience}
     % Prophecy
-    \datedexperience{Prophecy.io}{Jan, 2023 - Present / Bengaluru, India}
-		\explanation{Senior Data Engineer}\\
-		\explanationdetail{\coloredbullet\
+    \datedexperience{Prophecy.io}{Jan, 2023 - Present / Bengaluru, India} 	
+		\explanation{Senior Software Engineer (Data)}\\
+		\explanationdetail{\coloredbullet\  
 	 Building High-Quality Scalable ETL Frameworks and Pipelines using cutting edge solutions.
 	 }
-		\explanationdetail{\coloredbullet\
-	 working as Solutions Architect and helping our customers creating best frameworks to simpilify their data pipelines.
+		\explanationdetail{\coloredbullet\  
+	 Also Working as Solutions Architect and helping our customers creating best frameworks to simplify their data pipelines and infrastructure.
+	 }
+  		\explanationdetail{\coloredbullet\  
+	 Integrating Different Data Platforms and Warehouses to Prophecy using Scala, Akka and Apache Spark.
 	 }
   \explanationdetail{\coloredbullet\
-		\textbf{Tech Stack} - Apache Spark, Apache Airflow, Python, Scala, Databricks, Snowflake and DBT.
+		\textbf{Tech Stack} - Apache Spark, Apache Airflow, Python, Scala, Databricks, Snowflake, DBT, AWS, GCP, Akka.
 		}
     % Skyscanner
-\datedexperience{Skyscanner}{Dec, 2021 - Jan, 2023 / London, UK}
+\datedexperience{Skyscanner}{Dec, 2021 - Jan, 2023 / London, UK} 	
 		\explanation{Senior Software Engineer ( Distributed Systems ) }\\
 		\explanationdetail{\coloredbullet\
 	 Building High-Quality Scalable ETL Frameworks and Pipelines using cutting edge solutions like \textbf{Databricks}, \textbf{ Apache Spark}, \textbf{DeltaLake},  \textbf{Apache  Airflow} and \textbf{AWS}.
@@ -48,23 +51,23 @@ I am an active contributor to \textbf{Apache Airflow}.
 		\explanationdetail{\coloredbullet\
 	 Building High Scalable Streaming Pipelines using cutting edge solutions like \textbf{Apache Kafka} and \textbf{AWS MSK}.
 	 }
-
+	
   \explanationdetail{\coloredbullet\
 		\textbf{Tech Stack} - Apache Spark, Apache Airflow, Databricks, DeltaLake, Python and Java
 		}
 		    % Apache Airflow
-    \datedexperience{Apache Airflow}{Feb, 2021 - Present / Remote}
+    \datedexperience{Apache Airflow}{Feb, 2021 - Present / Remote} 	
 		\explanation{Open Source Contributor}
-
+		
         \explanationdetail{\coloredbullet\
-		\href{https://github.com/apache/airflow/commits?author=pateash}{Contributed} \textbf{12+} Pull requests to Opensource \href{https://github.com/apache/airflow}{Airflow} repository on Github.}
+		\href{https://github.com/apache/airflow/commits?author=pateash}{Contributed} \textbf{12+} Features to Opensource \href{https://github.com/apache/airflow}{Airflow} repository on Github.}
     \explanationdetail{\coloredbullet\
-	Participated and contributed in Meetups and discussions to make Apache Airflow one of the best Open Source Orchestration platform.}
-
+	Participated and contributed in Meetups and discussions to make Apache Airflow one of the best Open Source Orchestration platform.
+        }
     % WALMART LABS
-    \datedexperience{Walmart Global Tech}{Feb, 2021 - Dec, 2021 / Bangalore, India}
+    \datedexperience{Walmart Global Tech}{Feb, 2021 - Dec, 2021 / Bangalore, India} 	
 		\explanation{Software Engineer III (Big Data) }
-
+		
         \explanationdetail{\coloredbullet\
 		Part of the \textbf{supply chain technology} team, and working on cutting edge forecasting solutions to enable the everyday low-cost philosophy of Walmart.}
 		\explanationdetail{\coloredbullet\
@@ -77,7 +80,7 @@ I am an active contributor to \textbf{Apache Airflow}.
 		}
 		\\
 	% Deutsche bank
-	\datedexperience{Deutsche Bank}{July, 2018 - Jan, 2021 / Pune, India}
+	\datedexperience{Deutsche Bank}{July, 2018 - Jan, 2021 / Pune, India} 
 	\explanation{Senior Software Engineer}
         \explanationdetail{\coloredbullet\
 		Worked As a Big Data engineer in CIB division for Volcker Project.}
@@ -94,7 +97,7 @@ Reactor Framework with Oracle Database.}
 	\textbf{Tech Stack} - Apache Spark, Hadoop MapReduce, Hive, Impala, Beeline, Cloudera CDH,
 Java, Spring Framework, Spring Boot, Scala, Linux, GCP.}\\
 	% NIT, Bhopal
-	\datedexperience{NIT, Bhopal}{Oct, 2017 - Feb, 2018 / Bhopal, India}
+	\datedexperience{NIT, Bhopal}{Oct, 2017 - Feb, 2018 / Bhopal, India} 
 	\explanation{Research Assistant}
         \explanationdetail{\coloredbullet\
 		Co-written  \textbf{\itshape{"A Comparative Study of Music Recommendation Systems"}} with
@@ -110,7 +113,7 @@ evaluating them.}
 		}
 		\\
 	% CARWALE
-	\datedexperience{CarWale.com}{May, 2017 - Jul, 2017 / Mumbai, India}
+	\datedexperience{CarWale.com}{May, 2017 - Jul, 2017 / Mumbai, India} 
 	\explanation{Summer Intern}
         \explanationdetail{\coloredbullet\
 		Worked as Data Engineering Intern in the R\&D division of CarWale.}
@@ -126,24 +129,24 @@ architecture, we have also created a web application which will provide an inter
 and submit, schedule, and view results.}
  	 \explanationdetail{\coloredbullet\
 	\textbf{Tech Stack} - Scala, Apache Spark, Cassandra, Python-Flask Framework}
-
-
+ 
+ 
 %
 %
 %Education
-\section{Education}
-    \datedexperience{NIT, Bhopal}{ 2014 - 2018}
-    \explanation{Bachelor of Technology, Computer Science \& Engineering}
-     \explanationdetail{\coloredbullet\ %
+\section{Education} 
+    \datedexperience{NIT, Bhopal}{ 2014 - 2018} 
+    \explanation{Bachelor of Technology, Computer Science \& Engineering} 
+     \explanationdetail{\coloredbullet\ % 
      Graduated in Computer Science and Engineering.
-	\textbf{GGPA} - 8.4/10
+	\textbf{GGPA} - 8.4/10 
 	}
-	 \explanationdetail{\coloredbullet\ %
+	 \explanationdetail{\coloredbullet\ % 
 	  Worked as Web developer in the Student Council and developed websites and tech infrastructure for College events.
      }
-
-    \datedexperience{I.P.S Academy}{2011 - 2013}
-    \explanation{Higher Secondary, Science \& Mathematics}
+     
+    \datedexperience{I.P.S Academy}{2011 - 2013} 
+    \explanation{Higher Secondary, Science \& Mathematics} 
     \explanationdetail{\coloredbullet\
      Completed Higher Secondary with Physics, Chemistry, and Maths.
 	Percentage - 90.2\%     }
@@ -165,21 +168,21 @@ and submit, schedule, and view results.}
 
 % AWARDS and RECOGNITION
 \section{Awards and Recognition}
-    \newcommand{\awardone}{
+    \newcommand{\awardone}{ 
     Competed with 200+ teams and Won 3rd prize in Deutsche Bank's Global DataScience Competition Dabble.\\
     }
     %
-    \newcommand{\awardtwo}{
+    \newcommand{\awardtwo}{    
 		Won 2nd prize in Hackathon organized by Appointy Inc, https://github.com/pateash/appointy-hackathon\\
-		}
+		}       
     %
-        \newcommand{\awardthree}{
+        \newcommand{\awardthree}{ 
     Winner of Deutsche bank's excellence award.\\
     }
     %
 
-    \newcommand{\awardfour}{
-    	Winner of Medhavi Chhatra Puruskar, given by MP State Government for excellent performance in State board exams.}
+    \newcommand{\awardfour}{    
+    	Winner of Medhavi Chhatra Puruskar, given by MP State Government for excellent performance in State board exams.}       		
     %
 
 	%
@@ -192,18 +195,18 @@ and submit, schedule, and view results.}
 \section{Extra}
 %    \newcommand{\extraone}{ Languages - English, Hindi    }
     %
-    \newcommand{\extratwo}{
+    \newcommand{\extratwo}{    
 		Contributing to Apache Airflow, contributions - \textbf{https://github.com/pateash}
-		}
+		}       
     %
-    \newcommand{\extrathree}{
+    \newcommand{\extrathree}{    
     	Working on Open source, CMD tool for developers, \textbf{https://github.com/codingtools/cdt}
-		}
+		}       		
     %
-    \newcommand{\extrafour}{
+    \newcommand{\extrafour}{    
 		Writing Articles on Codebrace on Medium \textbf{https://medium.com/codebrace}, with over \textbf{100K+} reads so far.
 		}
-    \newcommand{\extrafive}{
+    \newcommand{\extrafive}{    
 		Created Opensource Regexplore, Intuitive Regex Checker \textbf{https://regexplore.github.io}
 		}
 
