--- a/cv/latex_cv-master/CV.tex
+++ b/cv/latex_cv-master/CV.tex
@@ -20,7 +20,7 @@
 %Sections
 %
 % Summary
-\addblocktext{Summary}{ Experienced Software Engineer experience in \textbf{Big Data}, \textbf{Distributed Systems}, \textbf{Java}, \textbf{Scala} and \textbf{Python} seeking to apply my abilities to contribute and build something productive.\\
+\addblocktext{Summary}{ Experienced Software Engineer with around \textbf{6 years} of experience in \textbf{Big Data}, \textbf{Distributed Systems}, \textbf{Java}, \textbf{Scala} and \textbf{Python} seeking to apply my abilities to contribute and build something productive.\\
 I am an active contributor to \textbf{Apache Airflow}.
 }
 % Experience
