--- a/cv/latex_cv-master/CV.tex
+++ b/cv/latex_cv-master/CV.tex
@@ -5,7 +5,7 @@
 \setmail{ashishpatel0720@gmail.com}
 \setposition{BigData Engineer} %ignored for now
 \setlinkedinaccount{https://linkedin.com/in/ashishpatel0720/} 
-\setportfolio{https://ashish.live/}
+\setportfolio{https://pateash.in/}
 
 %you can play with color of the template (red is also nice..)
 \setgithubaccount{https://github.com/pateash} %you can play with color of the template (red is also nice..)
@@ -20,14 +20,14 @@
 %Sections
 %
 % Summary
-\addblocktext{Summary}{ Experienced Software Engineer with around \textbf{6 years} of experience in \textbf{Big Data}, \textbf{Distributed Systems}, \textbf{Java}, \textbf{Scala} and \textbf{Python} seeking to apply my abilities to contribute and build something productive.\\
+\addblocktext{Summary}{ Experienced Software Engineer with  \textbf{6+ years} of experience in \textbf{Big Data}, \textbf{Distributed Systems}, \textbf{Java}, \textbf{Scala} and \textbf{Python} seeking to apply my abilities to contribute and build something productive.\\
 I am an active contributor to \textbf{Apache Airflow}.
 }
 % Experience
 \section{Experience}
     % Prophecy
     \datedexperience{Prophecy.io}{Jan, 2023 - Present / Bengaluru, India} 	
-		\explanation{Senior Software Engineer (Data)}\\
+		\explanation{Senior Software Engineer (Data Platform)}\\
 		\explanationdetail{\coloredbullet\  
 	 Building High-Quality Scalable ETL Frameworks and Pipelines using cutting edge solutions.
 	 }
@@ -60,9 +60,12 @@ I am an active contributor to \textbf{Apache Airflow}.
 		\explanation{Open Source Contributor}
 		
         \explanationdetail{\coloredbullet\
-		\href{https://github.com/apache/airflow/commits?author=pateash}{Contributed} \textbf{12+} Features to Opensource \href{https://github.com/apache/airflow}{Airflow} repository on Github.}
+		\href{https://github.com/apache/airflow/commits?author=pateash}{Contributed} \textbf{20+} Features to Opensource \href{https://github.com/apache/airflow}{Airflow} repository on Github.}
     \explanationdetail{\coloredbullet\
 	Participated and contributed in Meetups and discussions to make Apache Airflow one of the best Open Source Orchestration platform.
+        }
+    \explanationdetail{\coloredbullet\
+	\textbf{Ref} - \href{https://github.com/apache/airflow/commits?author=pateash}{https://github.com/apache/airflow/commits?author=pateash}.
         }
     % WALMART LABS
     \datedexperience{Walmart Global Tech}{Feb, 2021 - Dec, 2021 / Bangalore, India} 	
