--- a/cv/latex_cv-master/CV.tex
+++ b/cv/latex_cv-master/CV.tex
@@ -27,12 +27,12 @@ I am an active contributor to \textbf{Apache Airflow}.
 \section{Experience}
     % Prophecy
     \datedexperience{Prophecy.io}{Jan, 2023 - Present / Bengaluru, India} 	
-		\explanation{Senior Software Engineer (Data Platform)}\\
+		\explanation{Staff Software Engineer (Data Platform)}\\
 		\explanationdetail{\coloredbullet\  
-	 Building High-Quality Scalable ETL Frameworks and Pipelines using cutting edge solutions.
+	 Building High-Quality Scalable ETL and Big Data Frameworks using cutting edge solutions.
 	 }
 		\explanationdetail{\coloredbullet\  
-	 Also Working as Solutions Architect and helping our customers creating best frameworks to simplify their data pipelines and infrastructure.
+     Building reusable components for different Source like Apache Spark, Apache Airflow, and DBT for our Visual Low Code users, these backend components allows user to drag and drop and we generate code in the background.
 	 }
   		\explanationdetail{\coloredbullet\  
 	 Integrating Different Data Platforms and Warehouses to Prophecy using Scala, Akka and Apache Spark.
