--- a/cv/latex_cv-master/CV.tex
+++ b/cv/latex_cv-master/CV.tex
@@ -1,5 +1,5 @@
 \documentclass{muratcan_cv}
-\setname{Ashish}{Patel}
+\setname{Ashish Patel}{(Staff Software Engineer)}
 \setaddress{Bengaluru, India}
 \setmobile{+91 7705047900}
 \setmail{ashishpatel0720@gmail.com}
